--- a/index.html
+++ b/index.html
@@ -1,43 +1,73 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-<title>E-Galactic</title>
-<link rel="stylesheet" href="style.css">
-<style>
-  h1 {
-    color: white;
-    position: absolute; /* Use absolute positioning */
-    top: 0; /* Align to the top */
-    left: 0; /* Align to the left */
-    margin: 10px; /* Add some space from the edges */
-  }
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>E-Galactic</title>
+    <link rel="stylesheet" href="style.css">
+    <style>
+        body {
+            background-color: black; /* Background color for contrast */
+            font-family: Arial, sans-serif; /* Readable font */
+            color: white; /* Default text color */
+            margin: 0; /* Remove default margin */
+            padding: 20px; /* Padding around the body */
+        }
 
-  p {
-    color: white; /* Explicitly set paragraph text color to white */
-    position: absolute;
-    left: 10px; /* Align with the left edge */
-    max-width: 600px; /* Optional: limit the width of the paragraph */
-  }
+        h1 {
+            color: white; /* Header color */
+            margin: 0; /* Remove default margin */
+            padding: 0; /* Remove padding */
+            text-align: left; /* Align text to the left */
+            position: absolute; /* Position to the top left */
+            top: 20px; /* Distance from the top */
+            left: 20px; /* Distance from the left */
+        }
 
-  p:first-of-type {
-    top: 60px; /* Position the first paragraph below the heading */
-  }
+        .content {
+            position: absolute; /* Make content absolute */
+            top: 60px; /* Adjust top position below the header */
+            left: 20px; /* Align left to the container */
+        }
 
-  p:last-of-type {
-    top: 100px; /* Position the second paragraph below the first one */
-  }
+        p {
+            max-width: 600px; /* Limit width of the paragraph */
+            margin: 10px 0; /* Space between paragraphs */
+            text-align: left; /* Align text to the left */
+            padding-left: 0; /* Ensure no padding is applied */
+            font-size: 12px; /* Set the font size to be smaller */
+        }
 
-</style>
+        .container {
+            position: relative; /* Relative positioning for contained elements */
+            margin-top: 20px; /* Space above container */
+        }
+
+        .sun img {
+            width: 100px; /* Adjust size of the image */
+        }
+    </style>
 </head>
 <body>
     <h1>STAR COSMOS - Near Earth Object</h1>
     
-    <p>Welcome to STAR COSMOS - E-Galactic</p>
-    <p></p>
+    <div class="content">
+        <p>Welcome to STAR COSMOS - E-Galactic</p>
+        <p>1. EARTH: "The only astronomical object known to harbor life. Almost all of Earth's water is contained in its global ocean, covering 70.8% of Earth's crust. The remaining 29.2% of Earth's crust is land, most of which is located in the form of continental landmasses within Earth's land hemisphere. The average surface temperature on Earth is approximately 59 degrees Fahrenheit (15 degrees Celsius), according to NASA."</p>
+        <p>2. MERCURY: "The smallest planet in the solar system. Mercury is classified as a terrestrial planet, with roughly the same surface gravity as Mars. The surface of Mercury is heavily cratered as a result of countless impact events that have accumulated over billions of years. Temperatures on Mercury are extreme. During the day, temperatures can reach 800 degrees Fahrenheit (430 degrees Celsius). At night, temperatures can drop to minus 290 degrees Fahrenheit (minus 180 degrees Celsius)."</p>
+        <p>3. VENUS: "Venus has the densest atmosphere of the terrestrial planets, composed mostly of carbon dioxide with a thick, global sulfuric acid cloud cover. Venus has a core, mantle, and crust. Internal heat escapes through active volcanism, resulting in resurfacing instead of plate tectonics. At the surface, it has a mean temperature of 737 K (464 °C; 867 °F) and a pressure of 92 times that of Earth's at sea level."</p>
+        <p>4. ASTEROID: "Asteroids are small, rocky objects that orbit the Sun, primarily found in the asteroid belt between Mars and Jupiter. They are remnants from the early solar system, providing insight into its formation."</p>
+        <p>5. MARS: "The surface of Mars is orange-red because it is covered in iron(III) oxide dust, giving it the nickname 'the Red Planet'. Mars is among the brightest objects in Earth's sky, and its high-contrast albedo features have made it a common subject for telescope viewing. It is classified as a terrestrial planet and is the second smallest of the Solar System's planets with a diameter of 6,779 km (4,212 mi). The median surface temperature on Mars is -85°F (-65°C). Because the atmosphere is so thin, heat from the Sun easily escapes Mars."</p>
+        <p>6. JUPITER: "It is a gas giant with a mass more than 2.5 times that of all the other planets in the Solar System combined and slightly less than one-thousandth the mass of the Sun. Its diameter is eleven times that of Earth, and a tenth that of the Sun. Hydrogen constitutes 90% of Jupiter's volume, followed by helium, which forms 25% of its mass and 10% of its volume. The mean temperature on Jupiter is -166°F (-110°C)."</p>
+        <p>7. SATURN: "It is a gas giant, with an average radius of about nine times that of Earth. It has an eighth the average density of Earth, but is over 95 times more massive. Saturn's interior is thought to be composed of a rocky core, surrounded by a deep layer of metallic hydrogen, an intermediate layer of liquid hydrogen and liquid helium, and an outer layer of gas. Due to Saturn's vast distance from the Sun, the gas giant's average 'surface' temperature is -178 degrees Celsius or -288.4 degrees Fahrenheit."</p>
+        <p>8. URANUS: "It is a gaseous cyan-colored ice giant. Most of the planet is made of water, ammonia, and methane in a supercritical phase of matter, which astronomy calls 'ice' or volatiles. The planet's atmosphere has a complex layered cloud structure and has the lowest minimum temperature (49 K (−224 °C; −371 °F)) of all the Solar System's planets. Based on current models, inside its volatile mantle layer is a rocky core, and surrounding it is a thick hydrogen and helium atmosphere."</p>
+        <p>9. NEPTUNE: "It is the fourth-largest planet in the Solar System by diameter, the third-most-massive planet, and the densest giant planet. It is 17 times the mass of Earth and slightly more massive, but denser and smaller than fellow ice giant Uranus. Being composed primarily of gases and liquids, it has no well-defined solid surface, and orbits the Sun once every 164.8 years at an orbital distance of 30.1 astronomical units (4.5 billion kilometers; 2.8 billion miles). Dark, cold, and whipped by supersonic winds, giant Neptune is the eighth and most distant major planet orbiting our Sun. The mean temperature on Neptune is -330°F (-200°C)."</p>
+        <p>10. PLUTO: "Pluto (minor-planet designation: 134340 Pluto) is a dwarf planet in the Kuiper belt, a ring of bodies beyond the orbit of Neptune. It is the ninth-largest and tenth-most-massive known object to directly orbit the Sun. Like other Kuiper belt objects, Pluto is made primarily of ice and rock and is much smaller than the inner planets. The temperature on Pluto ranges from -387 to -369 Fahrenheit (-233 to -223 Celsius)."</p>
+    </div>
 
     <div class="container">
         <div class="sun">
-            <img src="earth.png" alt="sun">
+            <img src="earth.png" alt="Sun">
         </div>
         <div class="mercury"></div>
         <div class="venus"></div>
@@ -49,6 +79,8 @@
         <div class="neptune"></div>
         <div class="pluto"></div>
     </div>
+    
     <script src="script.js"></script>
 </body>
 </html>
+
